--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,10 +18,5 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-image: linear-gradient(to  bottom right, rgba(255, 255, 255, 0), rgb(197, 224, 235));
 }
